library/pod-security-policy/privileged-containers/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kd-apps", "kd-mlops", "kube-node-lease", "kube-system", "kubernetes-dashboard", "hpe-csi",
  "default", "kube-public", "hpecp-bootstrap", "mapr-external-info", "hpe-externalclusterinfo",
  "spark-operator", "hpe-system", "hpe-nodesvc", "hpe-secure", "hpe-templates-compute", "hpe-ldap",
  "kubeflow-operator", "istio-system", "kiali-operator", "gatekeeper-system","argocd", "hpecp-falco"]
